# hassaanfisky-panaversity-todo

./: .gitignore  Dockerfile.frontend  build_error.txt  build_log.txt  database.py  frontend-service.yaml  install_err.txt  next.config.ts  package-lock.json  secret.yaml.template  values.yaml
.github/workflows/: deploy.yml
app/: page.tsx
app/sign-up/: page.tsx
backend/: .env.example  main.py
backend/routes/: chat.py
components/: AddTaskModal.tsx  ChatMessage.tsx  Logo.tsx  Navbar.tsx  PriorityBadge.tsx
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/sign-in/: page.tsx
frontend/app/sign-up/: page.tsx
frontend/components/: ChatMessage.tsx  ChatSidebar.tsx  Logo.tsx  TaskCard.tsx
frontend/context/: LanguageContext.tsx
frontend/lib/: api.ts  auth-client.ts  auth.ts
hackathon-2/: .gitignore  Dockerfile.backend
hackathon-2/backend/: auth.py  models.py  requirements.txt
hackathon-2/backend/routes/: events.py
hackathon-2/frontend/: .gitignore  build_utf8.txt  next.config.ts  package-lock.json  package.json  tailwind.config.ts
hackathon-2/frontend/app/: design-tokens.css  globals.css  layout.tsx  page.tsx
hackathon-2/k8s/: backend-deployment.yaml  namespace.yaml
hackathon-2/phase-1/todo-console/: pyproject.toml
hackathon-2/phase-1/todo-console/src/: main.py
hackathon-2/recurring-service/: main.py
hackathon-2/scripts/: minikube-start.sh
helm/: Chart.yaml
k8s/dapr/: kafka-pubsub.yaml
recurring-service/: requirements.txt
routes/: chat.py  tasks.py
todo-console/src/: todo.py
(+30 files in other folders)
