[project]
name = "todo-console"
version = "1.0.0"
description = "Panaversity Hackathon II — Phase I: Terminal Todo App"
requires-python = ">=3.13"
dependencies = [
    "rich>=13.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Run with: uv run python src/main.py
